--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@
     }
     title{font-family:sans-serif;
         margin-top:auto;
-        color: rgb(255, 255, 255);
+        color: black(255, 255, 255);
 
     }
     li{
         padding-bottom: 3px;
-        color: rgb(255, 255, 255);
+        color: black(255, 255, 255);
         text-shadow: 1.5px 1px 3px rgb(0, 0, 0);
         list-style-type: none;
     }
